# svideo

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  Appheader.jsx  Upload.jsx  Watch.jsx  Welcome.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
