[package]
name = "svideo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2.8.2"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.13.0"
futures-util = "0.3.30"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
